<resources>
    <string name="app_name">Spider Quest</string>
    <string name="gioca">Play</string>
    <string name="istruzioni">Instructions</string>
    <string name="menu">Menu</string>
    <string name="istruzioni1">On the display at the centre of the web there are
    three spiders ready to hide along the branches of the web.</string>
    <string name="istruzioni2">Pay attention to the leds lighting up:
        they will show the path of the spider in the same colour.</string>
    <string name="istruzioni3">When the leds turn off, it means that the spiders hid into
        one of the hubs. Drag the spider on the right hub and, when you\'re done, submit your answer.</string>
    <string name="istruzioni4">If you guess right where the spiders are hiding, you win.
    Have fun trying more difficult levels, increasing the speed of the spiders.
    </string>
    <string name="compila">Fill the form below with the IP address of the web in order to begin to play. </string>
    <string name="inizia">Start</string>
    <string name="invio">Submit</string>
    <string name="vittoria">You Win!</string>
    <string name="sconfitta">You Lose!</string>
    <string name="facile">Easy</string>
    <string name="normale">Regular</string>
    <string name="difficile">Hard</string>
    <string name="livello">Difficulty</string>
    <string name="finisci">Set the spiders!</string>
    <string name="imposta">Set the difficulty!</string>
        />
</resources>
