<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ragnatela.did.SpiderQuest.GameMenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutCompat"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/relativeLayout"
            android:layout_alignStart="@+id/relativeLayout">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logogrande"
                android:id="@+id/imageView2"
                android:layout_above="@+id/gioca_main"
                android:layout_alignLeft="@+id/linearLayoutCompat"
                android:layout_alignStart="@+id/linearLayoutCompat" />
        </android.support.v7.widget.LinearLayoutCompat>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/relativeLayout"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/linearLayoutCompat"
            android:layout_centerHorizontal="true">

            <Button
                android:text="@string/gioca"
                android:layout_width="192dp"
                android:layout_height="48dp"
                android:id="@+id/gioca_main"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livello"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:text="@string/istruzioni"
                android:layout_width="192dp"
                android:layout_height="48dp"
                android:id="@+id/istruzioni"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

    </RelativeLayout>










</RelativeLayout>