<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instruction4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alessia.appragni.Instruction4Activity">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerVertical="true">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/layoutfinale"
           android:layout_centerVertical="true"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="17dp">

           <Button
               android:text="@string/gioca"
               android:layout_width="192dp"
               android:layout_height="48dp"
               android:id="@+id/gioca_istruzioni4"
               android:layout_alignBaseline="@+id/menu_istruzioni4"
               android:layout_alignBottom="@+id/indietro2"
               android:layout_alignParentTop="true"
               android:layout_alignParentLeft="true"
               android:layout_alignParentRight="true"
               android:layout_alignParentEnd="true"
               android:onClick="openInizio"/>

           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:srcCompat="@mipmap/indietro"
               android:layout_marginBottom="46dp"
               android:id="@+id/indietro2"
               android:onClick="backtothirdInstruction"
               android:layout_alignParentRight="true"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true"
               />

           <Button
               android:text="@string/menu"
               android:layout_width="192dp"
               android:layout_height="48dp"
               android:id="@+id/menu_istruzioni4"
               android:onClick="backtoMenu"
               android:layout_alignParentTop="true"
               android:layout_toLeftOf="@+id/gioca_istruzioni4"
               android:layout_toStartOf="@+id/gioca_istruzioni4"
               android:layout_marginRight="25dp"
               android:layout_marginEnd="25dp" />
       </RelativeLayout>



       <android.support.v7.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/layoutfinale"
           android:layout_alignParentTop="true">

           <TextView
               android:text="@string/istruzioni4"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/textView3"
               android:textAlignment="center"
               android:textSize="24dp"
               android:layout_centerHorizontal="true"
               android:layout_centerVertical="true" />

       </android.support.v7.widget.LinearLayoutCompat>

   </RelativeLayout>






</RelativeLayout>
