<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instruction1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alessia.appragni.Instruction1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <Button
                android:text="@string/gioca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gioca_istruzioni1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_istruzioni1"
                android:onClick="backtoMenu"
                android:layout_below="@+id/gioca_istruzioni1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" /></RelativeLayout>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutdisplay">
                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:src="@drawable/schermo"
                    android:id="@+id/schermo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </android.support.v7.widget.LinearLayoutCompat>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutdisplay"
            android:layout_centerVertical="true">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/avanti"
                android:id="@+id/avanti"
                android:onClick="opensecondInstruction"
                android:layout_alignBottom="@+id/istruzione"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />

            <TextView
                android:text="@string/istruzioni1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/istruzione"
                android:textAlignment="center"
                android:textSize="24dp"
                android:layout_marginRight="48dp"
                android:layout_marginLeft="48dp"
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>

    </RelativeLayout>




</RelativeLayout>
