<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instruction2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alessia.appragni.Instruction2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:text="@string/gioca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/gioca_istruzioni2" />

            <Button
                android:text="@string/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gioca_istruzioni2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:id="@+id/menu_istruzioni2"
                android:onClick="backtoMenu"/>

        </RelativeLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutschema">
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:src="@drawable/schema"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </android.support.v7.widget.LinearLayoutCompat>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutschema"
            android:layout_centerVertical="true">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/indietro"
                android:id="@+id/indietro"
                android:onClick="backtofirstInstruction"
                android:layout_alignTop="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@mipmap/avanti"
                android:id="@+id/avanti1"
                android:onClick="openthirdInstruction"
                android:layout_marginTop="10dp"
                android:layout_alignTop="@+id/textView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:text="@string/istruzioni2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textAlignment="center"
                android:textSize="24dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginTop="24dp"
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>




        </RelativeLayout>
    </RelativeLayout>




</RelativeLayout>
